@@ -1,5 +1,7 @@
 - diskdrake:
   o really fix partition device name for some dmraid (missing "p", cf #38363)
+- draksound (#37826):
+  o add support to enable/disable PulseAudio
 - cpufreq: fix gsx-suspmod probe
 - scannerdrake: fix to open usbtable.gz instead of usbtable
 
